# docs/swagger.json
@@ -82,9 +82,13 @@
         "dtos.CreateSubscriptionRequest": {
             "type": "object",
             "required": [
+                "billingDate",
                 "name"
             ],
             "properties": {
+                "billingDate": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 }
@@ -93,6 +97,9 @@
         "dtos.CreateSubscriptionResponse": {
             "type": "object",
             "properties": {
+                "billingDate": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
