# dtos/subscription.go
@@ -1,10 +1,14 @@
 package dtos
 
+import "time"
+
 type CreateSubscriptionRequest struct {
-	Name string `json:"name" binding:"required"`
+	Name        string    `json:"name" binding:"required"`
+	BillingDate time.Time `json:"billingDate" binding:"required"`
 }
 
 type CreateSubscriptionResponse struct {
-	ID   string `json:"id"`
-	Name string `json:"name"`
+	ID          string    `json:"id"`
+	Name        string    `json:"name"`
+	BillingDate time.Time `json:"billingDate"`
 }
