# models/subscription.go
@@ -1,7 +1,10 @@
 package models
 
+import "time"
+
 type Subscription struct {
-	ID     string
-	UserID string
-	Name   string
+	ID          string
+	UserID      string
+	Name        string
+	BillingDate time.Time
 }
